# OS

cp/: CMakeLists.txt  main.cpp
cp/include/: job_dag.hpp
cp/tests/: tests.cpp
data/: job1  job2  job3
data/e1/: e1.json
data/e2/: e2.json
data/e3/: e3.json
data/e4/: e4.json
lab1/: CMakeLists.txt  main.cpp
lab1/include/: lab1.hpp  utils.hpp
lab1/src/: child.cpp  lab1.cpp  utils.cpp
lab1/tests/: tests.cpp
lab2/: .CMakeLists.txt.swp  CMakeLists.txt  main.c
lab2/include/: lab2.h  utils.h
lab2/src/: lab2.c  lab2.cpp  utils.c  utils.cpp
lab2/tests/: tests.c  tests.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: utils.hpp
lab3/src/: child.cpp  lab3.cpp  utils.cpp
lab3/tests/: tests.cpp
lab4/: CMakeLists.txt  dynamic_main.cpp  static_main.cpp
lab4/include/: lib.hpp  utils.hpp
lab4/src/: lib1.cpp  lib2.cpp  utils.cpp
lab4/tests/: tests.cpp
lab57/: CMakeLists.txt
lab57/include/: topology.hpp
lab57/src/: calculation_node.cpp  control_node.cpp  socket.cpp
lab57/tests/: tests.cpp
